--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@ body{
     font-family: madefor-text-bold,helveticaneuew01-65medi,helveticaneuew02-65medi,helveticaneuew10-65medi,sans-serif;
     padding: 0px;
     height: 1000px;
-    
+    margin-left: -1px;
 }
 
 .heading{
@@ -12,13 +12,15 @@ body{
 
 
 main{
-    margin: 10px;
+    /* margin: 10px; */
+    margin-right: 20px;
     padding: 0px;
+    padding-left: 3px;
     /* justify-content: center; */
     background-color: rgb(250, 247, 247);
-    width: 450px;
+    width: 454px;
     margin: 0px auto;
-    box-shadow: 0px 1px 5px 0px;
+    box-shadow: 0px 0px 5px -2px grey;
     border-radius: 7px;
 }
 
@@ -225,7 +227,7 @@ h1{
   }
 
   /* .mpesaMessage1-div{
-    margin-bottom: 40px;
+    text-align: left;
   }  */
 
   .mpesaMessage1{
@@ -235,12 +237,13 @@ h1{
     border-radius: 3px;
     padding: 1px 5px; 
     font-family: madefor-text-bold,helveticaneuew01-65medi,helveticaneuew02-65medi,helveticaneuew10-65medi,sans-serif;
-    margin: auto;
+    /* margin: auto; */
+    margin-left: 6px;
     font-weight: lighter;
     color: white;
     font-size: 14px;
     line-height: 17px;
-    
+    text-align: left;
   }
 
   .message-button{
@@ -270,12 +273,13 @@ h1{
   }
 
   .message-outputs{
-    border: 1px solid grey;
+    /* border: 1px solid grey; */
     border-radius: 5px;
     background-color: white;
     padding-bottom: 20px;
     margin-bottom: 40px;
     /* margin-left: 15px; */
+    /* text-align: left; */
   }
 
   .messages-head{
