--- a/css/index.css
+++ b/css/index.css
@@ -3,10 +3,12 @@ body{
     padding: 0px;
     height: 1000px;
     margin-left: -1px;
+    background-color: rgb(48, 46, 46);
 }
 
 .heading{
   text-align: center;
+  color: rgb(236, 236, 236);
 }
 
 
@@ -253,7 +255,11 @@ h1{
   .message-button{
     margin-bottom: 30px;
     cursor: pointer;
-    margin-left: 0px;
+    color: rgb(237, 237, 237);
+    background-color: rgb(32, 32, 32);
+    padding: 4px 6px;
+    border-radius: 3px;
+    border: none;
   }
 
   .div4{
